package com.vanskarner.adapters.singleadapter;

import androidx.recyclerview.widget.DiffUtil;

public abstract class BaseDiffCallback<BI extends BindItem> extends DiffUtil.ItemCallback<BI> {
}
