package com.vanskarner.adapters.singleadapter;

public interface BindItem {
}
