package com.vanskarner.adapters.singleadapter;

class LoadBindItem implements BindItem {
}
